@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.1
 
+  *) [TS-1594] ProxyMutexPtr and Ptr<ProxyMutex> are identical
+
   *) [TS-1591] gzip plugin should load relative config file
 
   *) [TS-1582] C++11 requires space between strings and format specifiers
